<resources>
    <string name="app_name">作业查</string>
    <string name="logon">验证码登录</string>
    <string name="lock">密码登录</string>
    <string name="reminder1">请输入手机号或者邮箱</string>
    <string name="ring">登录</string>
    <string name="ringup">注册账户</string>
    <string name="forget">忘记密码</string>
    <string name="school">用学校统一身份登录</string>
    <string name="phone">仅支持中国大陆手机号</string>
    <string name="code">获取验证码</string>
    <string name="title_activity_nav__main2">MainActivity</string>
    <string name="title_home">班级</string>
    <string name="title_dashboard">发现</string>
    <string name="title_notifications">我的</string>
    <string name="notifications">请输入密码</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="reminder">我已阅读并同意《用户协议》与《隐私政策》</string>
    <string name="reminder2">如需要帮助，请联系客服111111#####1</string>
</resources>