<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:icon="@drawable/work"
    tools:context=".MainActivity"
    android:orientation="vertical"
 >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
       >
        <Button
            android:id="@+id/btn_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logon"
            android:background="@drawable/buton_style"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/btn_psd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/lock"
            android:background="@drawable/buton_style"
            android:textSize="20dp"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/user"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="账号" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/reminder1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/unlock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="密码" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/notifications"
                android:inputType="textPassword"

                />

            <ImageButton
                android:id="@+id/bt_change_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_alignParentRight="true"
                android:layout_margin="20dp"
                android:padding="0dp"
                android:src="@drawable/hide" />
        </RelativeLayout>

        <Button

            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#15ccf2"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/ring" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buton_style"
                android:layout_weight="1"
                android:textColor="#15ccf2"
                android:textStyle="bold"
                android:text="@string/ringup" />

            <Button
                android:id="@+id/btn_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buton_style"
                android:text="@string/forget"
                android:textColor="#15ccf2"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

   </LinearLayout>

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="其他登录方式" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeTop"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        >

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/weixin"
            android:gravity="center"

            android:id="@+id/btnGetMp3s"
            android:layout_toLeftOf="@id/txtHide"


            />
        <TextView android:id="@+id/txtHide" android:layout_width="46dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/btnExitSys"

            android:layout_toRightOf="@id/txtHide"
            android:background="@drawable/qq" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"

       >

        <RadioButton
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="28dp"
            android:layout_centerVertical="true"
            android:text="@string/reminder" />
    </RelativeLayout>

    </LinearLayout>